[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "datadog-avmconsulting-workday"
description = "The AVM Consulting Workday check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "avmconsulting_workday",
]
authors = [
    { name = "AVMConsulting", email = "alexey.moseyev@avmconsulting.net" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=11.2.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = [
    "lxml",
    "python-dateutil",
    "pytz",
]

[project.urls]
Source = "https://github.com/DataDog/marketplace"

[tool.hatch.version]
path = "datadog_checks/avmconsulting_workday/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
    "/requirements-dev.txt",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/avmconsulting_workday",
]
dev-mode-dirs = [
    ".",
]
